# emma-tracker

./: CITATION.cff  LICENSE  README.md  pyproject.toml
code/: detection_main.py  input_output.py  main.py  postprocessing.py  tracking_helper_func.py  tracking_merging.py
emma/: README.md  config.py  config.yaml  detection_filter_func.py  detection_helper_func.py  detection_main.py  grid_manager.py  input_output.py  logging_setup.py  main.py  postprocessing.py  postprocessing_helper_func.py  tracking_filter_func.py  tracking_helper_func.py  tracking_main.py  tracking_merging.py  tracking_splitting.py
emma/old_but_maybe_usefull_func/: old_funcs.py  plot.py
preprocess/: 01_calc_lifted_index_ERA5.py  02_remap_lifted_index.py  calc_lifted_index_ERA5.py  calc_lifted_index_cordex.py
tests/: config_test.yaml  temp_config.yaml  test.py
tests/data/input/: MCS-test_20200101-00-00.nc_test  MCS-test_20200101-01-00.nc_test  MCS-test_20200101-03-00.nc_test  MCS-test_20200101-06-00.nc_test  MCS-test_20200101-07-00.nc_test  MCS-test_20200101-08-00.nc_test  MCS-test_20200101-10-00.nc_test  MCS-test_20200101-13-00.nc_test  MCS-test_20200101-14-00.nc_test
tests/reference/detection/2020/01/: detection_20200101T00.nc_test  detection_20200101T01.nc_test  detection_20200101T02.nc_test  detection_20200101T03.nc_test  detection_20200101T04.nc_test  detection_20200101T05.nc_test  detection_20200101T06.nc_test  detection_20200101T07.nc_test  detection_20200101T08.nc_test  detection_20200101T09.nc_test  detection_20200101T10.nc_test  detection_20200101T11.nc_test  detection_20200101T12.nc_test  (+3 more)
tests/test_data/: MCS-test_20200101-00-00.nc_test  MCS-test_20200101-01-00.nc_test  MCS-test_20200101-02-00.nc_test  MCS-test_20200101-03-00.nc_test  MCS-test_20200101-04-00.nc_test  MCS-test_20200101-05-00.nc_test  MCS-test_20200101-06-00.nc_test  MCS-test_20200101-07-00.nc_test  MCS-test_20200101-08-00.nc_test  MCS-test_20200101-09-00.nc_test  MCS-test_20200101-10-00.nc_test  MCS-test_20200101-11-00.nc_test  MCS-test_20200101-12-00.nc_test  MCS-test_20200101-13-00.nc_test  MCS-test_20200101-14-00.nc_test  MCS-test_20200101-15-00.nc_test
(+16 files in other folders)
