[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emma-tracker"
version = "1.0.0"
description = "European Mesoscale Convective System Model Assessment-Tracker (EMMA-Tracker)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"} 
authors = [
  {name = "David Kneidinger", email = "david.kneidinger@uni-graz.at"},
]
keywords = ["climate", "meteorology", "MCS", "tracking", "CORDEX", "GPM"]

dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "netCDF4",        
  "geopy",          
  "scipy", 
  "scikit-image",         
  "pyyaml",        
  "dask",          
  "bottleneck",     
  "tqdm",
  "pytest"       
]

[project.scripts]
emma-tracker = "emma.main:main"

[tool.hatch.build.targets.wheel]
packages = ["emma"]

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore the skimage boolean deprecation (external library issue)
    "ignore:.*np.bool8.*:DeprecationWarning",
    
    # Ignore the binary size change warning (environment issue, usually harmless)
    "ignore:.*numpy.ndarray size changed.*:RuntimeWarning",
    
    # Ignore divide by zero in scipy measurements (handled internally by returning NaN)
    "ignore:invalid value encountered in scalar divide:RuntimeWarning"
]